--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
   </head>
 
   <body>
-
+    <nav class="nav">
+      <ul class="nav__menu">
+        <li class="menu__item">Manga</li>
+        <li class="menu__item">Tomate</li>
+        <li class="menu__item">Morango</li>
+        <li class="menu__item">Cana</li>
+      </ul>
+    </nav>
   </body>
 
 </html>
