feat: Adding heading-1 on page

--- a/index.html
+++ b/index.html
@@ -18,6 +18,10 @@
         <li class="menu__item">Cana</li>
       </ul>
     </nav>
+
+    <section class="section-welcome">
+      <h1 class="heading-1">Welcome Sir!</h1>
+    </section>
   </body>
 
 </html>
