feat: Rebase sucessfull

--- a/index.html
+++ b/index.html
@@ -21,6 +21,31 @@
 
     <section class="section-welcome">
       <h1 class="heading-1">Welcome Sir!</h1>
+
+      <p class="paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
+        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
+      </p>
+      <p class="paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
+        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
+      </p>
+      <p class="paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
+        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
+      </p>
+      <p class="paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
+        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
+      </p>
+      <p class="paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
+        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
+      </p>
+      <p class="paragraph">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
+        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
+      </p>
     </section>
   </body>
 
