fix: solving confilts

--- a/index.html
+++ b/index.html
@@ -20,35 +20,8 @@
     </nav>
 
     <section class="section-welcome">
-<<<<<<< HEAD
-      <h1 class="heading-1">Welcome Sir!</h1>
-
-      <p class="paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
-        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
-      </p>
-      <p class="paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
-        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
-      </p>
-      <p class="paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
-        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
-      </p>
-      <p class="paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
-        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
-      </p>
-      <p class="paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
-        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
-      </p>
-      <p class="paragraph">
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aperiam sed fuga sequi? Nisi accusamus, libero
-        doloribus repudiandae consectetur itaque at cum officia sint temporibus, ut et, aut atque architecto aperiam?
-      </p>
-=======
-      <h2 class="heading-2">Cursos</h2>
+      <h2 class="heading-2">Cursos de TI</h2>
+      >>>>>>> c91c239 (Alterei o título para cursos de TI)
 
       <dl>
         <dt>Vagrant</dt>
@@ -67,7 +40,7 @@
         <dd>Introdução a orquestração de containers</dd>
       </dl>
 
->>>>>>> 057585b (fix: Simplificando o título)
+      >>>>>>> 057585b (fix: Simplificando o título)
     </section>
   </body>
 
