--- a/index.html
+++ b/index.html
@@ -21,8 +21,6 @@
 
     <section class="section-welcome">
       <h2 class="heading-2">Cursos de TI</h2>
-      >>>>>>> c91c239 (Alterei o título para cursos de TI)
-
       <dl>
         <dt>Vagrant</dt>
         <dd>Gerenciamento de máquinas virtuais</dd>
@@ -40,7 +38,17 @@
         <dd>Introdução a orquestração de containers</dd>
       </dl>
 
-      >>>>>>> 057585b (fix: Simplificando o título)
+      <h2>Cursos de cloud</h2>
+      <dl>
+        <dt>Curso cloud 1</dt>
+        <dd>Descrição 1</dd>
+
+        <dt>Curso cloud 2</dt>
+        <dd>Descrição 2</dd>
+
+        <dt>Curso cloud 3</dt>
+        <dd>Descrição 3</dd>
+      </dl>
     </section>
   </body>
 
