--- a/index.html
+++ b/index.html
@@ -49,6 +49,18 @@
         <dt>Curso cloud 3</dt>
         <dd>Descrição 3</dd>
       </dl>
+
+      <h2>Amozon S3</h2>
+      <dl>
+        <dt>Curso Amozon 1</dt>
+        <dd>Descrição 1</dd>
+
+        <dt>Curso Amozon 2</dt>
+        <dd>Descrição 2</dd>
+
+        <dt>Curso Amozon 3</dt>
+        <dd>Descrição 3</dd>
+      </dl>
     </section>
   </body>
 
