Adicionando os cursos de linux 1 e 2

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
 
     <section class="section-welcome">
       <h2 class="heading-2">Cursos de TI</h2>
-      >>>>>>> c91c239 (Alterei o título para cursos de TI)
 
       <dl>
         <dt>Vagrant</dt>
@@ -40,7 +39,16 @@
         <dd>Introdução a orquestração de containers</dd>
       </dl>
 
-      >>>>>>> 057585b (fix: Simplificando o título)
+      <h2 class="heading-2">Cursos de Linux</h2>
+
+      <dl>
+        <dt>Linux 1</dt>
+        <dd>Gerenciamento de máquinas virtuais</dd>
+
+        <dt>Linux 2</dt>
+        <dd>Criando containers sem dor de cabeça</dd>
+      </dl>
+
     </section>
   </body>
 
