Adicionado curso de google cloud

--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
 
         <dt>Curso cloud 3</dt>
         <dd>Descrição 3</dd>
+
+        <dt>Curso google cloud</dt>
+        <dd>Descrição google</dd>
       </dl>
 
       <h2>Amozon S3</h2>
