--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="style.css" rel="stylesheet">
-    <title>Lista de cursos</title>
+    <title>Lista de cursos da alura e caelum</title>
   </head>
 
   <body>
@@ -21,7 +21,6 @@
 
     <section class="section-welcome">
       <h2 class="heading-2">Cursos de TI</h2>
-      >>>>>>> c91c239 (Alterei o título para cursos de TI)
 
       <dl>
         <dt>Vagrant</dt>
@@ -40,7 +39,42 @@
         <dd>Introdução a orquestração de containers</dd>
       </dl>
 
-      >>>>>>> 057585b (fix: Simplificando o título)
+      <h2 class="heading-2">Cursos de Linux</h2>
+
+      <dl>
+        <dt>Linux 1</dt>
+        <dd>Gerenciamento de máquinas virtuais</dd>
+
+        <dt>Linux 2</dt>
+        <dd>Criando containers sem dor de cabeça</dd>
+      </dl>
+
+      <h2>Cursos de cloud</h2>
+      <dl>
+        <dt>Curso cloud 1</dt>
+        <dd>Descrição 1</dd>
+
+        <dt>Curso cloud 2</dt>
+        <dd>Descrição 2</dd>
+
+        <dt>Curso cloud 3</dt>
+        <dd>Descrição 3</dd>
+
+        <dt>Curso google cloud</dt>
+        <dd>Descrição google</dd>
+      </dl>
+
+      <h2>Amozon S3</h2>
+      <dl>
+        <dt>Curso Amozon 1</dt>
+        <dd>Descrição 1</dd>
+
+        <dt>Curso Amozon 2</dt>
+        <dd>Descrição 2</dd>
+
+        <dt>Curso Amozon 3</dt>
+        <dd>Descrição 3</dd>
+      </dl>
     </section>
   </body>
 
