Corrigindo bug, cursos de chell faltando

--- a/index.html
+++ b/index.html
@@ -48,6 +48,12 @@
         <dt>Linux 2</dt>
         <dd>Criando containers sem dor de cabeça</dd>
 
+        <dt>Chell script</dt>
+        <dd>Criando containers sem dor de cabeça</dd>
+
+        <dt>Chell script 2</dt>
+        <dd>Criando containers sem dor de cabeça</dd>
+
         <h2>Cursos de cloud</h2>
         <dl>
           <dt>Curso cloud 1</dt>
